[SELC-4783] feat: Added scheduler for indexing UOs with field codice_fiscale_sfe